--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
       <div class="row justify-content-between">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>A new Concept of Connecting </h1>
             <h1><span>COMING SOON</span></h1>
-            <h2>We are team of talented designers making websites with Bootstrap</h2>
+            <h2>"Life is either a daring adventure or nothing at all." -Helen Keller</h2>
           
           </div>
         </div>
