--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
 
     <div class="container">
-      <div class="row justify-content-between">
+      <div class="row justify-content-between text-center">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
             <h1><span>COMING SOON</span></h1>
